typescript/checker/tests/conformance/es6/for-ofStatements/for-of46.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            20,
        ),
        hi: BytePos(
            21,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/for-ofStatements/for-of46.ts:2:5
  |
2 | var k: string, v: boolean;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            31,
        ),
        hi: BytePos(
            32,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/for-ofStatements/for-of46.ts:2:16
  |
2 | var k: string, v: boolean;
  |                ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            58,
        ),
        hi: BytePos(
            61,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/for-ofStatements/for-of46.ts:3:15
  |
3 | var map = new Map([["", true]]);
  |               ^^^

